# procedure

./: .build  .cursorignore  .debug  .gitignore  .gitmodules  .run  CLAUDE.md  README.md  notes.md  temp.dsp
core/: Cargo.toml
core/.cargo/: config
core/algorithms/: Cargo.toml
core/algorithms/src/: lib.rs
core/algorithms/src/distortion/: mod.rs  waveshaper.rs
core/algorithms/src/dynamics/: clip.rs  compressor.rs  gain.rs  mod.rs
core/algorithms/src/oscillator/: additive.rs  mod.rs  noise.rs  oscillator.rs  pulse.rs  saw.rs  sine.rs  square.rs  triangle.rs  wavetable.rs
core/algorithms/src/space/: reverb.rs
core/algorithms/src/synthesis/: equilibrium.rs  lfo.rs  mod.rs  noise.rs  oscillator.rs  wavetable.rs
core/algorithms/src/utilities/: apply.rs  constant.rs  lookup_table.rs  mod.rs  pitched_player.rs  player.rs
core/dsp/: Cargo.toml  event.rs  lib.rs  loadable.rs  voice.rs
core/dsp/block/: block.rs
core/dsp/buffers/: block.rs  buffer.rs  bus.rs  event.rs  io.rs  mod.rs  time.rs
core/dsp/dsp/: dynamics.rs  envelopes.rs  interpolators.rs  mod.rs  oscillator.rs  wavetable.rs
core/dsp/float/: complex.rs  float.rs  frame.rs  mod.rs  sample.rs  stereo.rs
core/dsp/math/: float.rs
core/dsp/routing/: chain.rs  input.rs  merge.rs  mod.rs  node.rs  output.rs  parallel.rs  param.rs  series.rs  split.rs
core/dsp/sample/: cache.rs  sample.rs  sample_mut.rs
core/dsp/src/buffers/: time.rs
core/dsp/src/math/: buffer.rs  float.rs
core/dsp/src/sample/: cache.rs  sample_mut.rs
core/dsp/synthesis/: lfo.rs  noise.rs  oscillator.rs  wavetable.rs
core/dsp/traits/: basic.rs  loadable.rs  mod.rs  pitched.rs  player.rs
core/graph/: Cargo.toml  core.rs  graph.rs  host.rs  plugin.rs  plugins.rs  processor.rs
core/io/: Cargo.toml  build.rs
core/io/juce_io/: lib.cpp
core/io/src/: lib.rs
core/modules/: Cargo.toml  module_new.rs  modules.rs
core/modules/control/: mod.rs
core/modules/control/comparisons/: equal.rs  greater.rs  greater_equal.rs  less.rs  less_equal.rs  not_equal.rs
core/modules/control/effects/: bend.rs  counter.rs  display.rs  hold.rs  mod.rs  multiplexer.rs  scale.rs  slew.rs  slope.rs  toggle.rs
core/modules/control/logic/: and.rs  not.rs  or.rs  xor.rs
core/modules/control/operations/: add.rs  clamp.rs  divide.rs  modulo.rs  multiply.rs  negative.rs  subtract.rs
core/modules/control/sources/: beats.rs  clock.rs  constant.rs  envelope.rs  knob.rs  lfo.rs  mod.rs  random.rs
core/modules/control/widgets/: button.rs  display.rs  knob.rs  mod.rs  pad.rs  xy_pad.rs
core/modules/effects/: mod.rs
core/modules/effects/distortion/: tube.rs  waveshaper.rs
core/modules/effects/dynamics/: compressor.rs  gain.rs  gate.rs  mixer.rs  mute.rs  panner.rs
core/modules/effects/filters/: analog_filter.rs  digital_filter.rs
core/modules/effects/modulation/: chorus.rs  flanger.rs  phaser.rs
core/modules/effects/spectral/: crossover.rs
core/modules/interface/controls/: image.rs  image_fader.rs  image_knob.rs  keyboard.rs  simple_button.rs  simple_fader.rs  simple_knob.rs  simple_pad.rs  simple_switch.rs  solid_color.rs
core/modules/interface/layout/: mod.rs
core/modules/interface/metering/: level.rs
core/modules/sequencing/: arpeggiator.rs  detune.rs  drift.rs  keyboard.rs  mod.rs  monophonic.rs  notes_track.rs  pitch.rs  portamento.rs  pressure.rs  random_notes.rs  scale.rs  step_sequencer.rs  timbre.rs  transpose.rs  unison.rs
core/modules/sources/sampling/: audio_track.rs  granular.rs  looper.rs  mod.rs  multi_sampler.rs  sample_rack.rs  sampler.rs  slicer.rs
core/modules/sources/synthesis/: analog_oscillator.rs  mod.rs  noise.rs  pluck.rs  pulse.rs  saw.rs  sine.rs  square.rs  triangle.rs  wavetable_oscillator.rs
core/modules/utilities/: mod.rs  variable.rs
core/modules/utilities/conversions/: control_to_notes.rs  notes_to_control.rs
core/modules/utilities/io/: audio_input.rs  audio_output.rs  audio_plugin.rs  midi_input.rs  midi_output.rs  mod.rs
core/modules/utilities/time/: accumulate.rs  global_time.rs  global_transport.rs  local_time.rs  mod.rs  rate.rs  reverse.rs
core/modules/widget/: button.rs  dropdown.rs  fader.rs  groups.rs  knob.rs  mod.rs  notes_track.rs  sample_mapper.rs  traits.rs
core/plugins/: Cargo.toml
core/plugins/src/: lib.rs
core/src/: api.rs
core/src/host/: host.rs  mod.rs  plugin.rs
core/src/host/graph/: mod.rs  plugins.rs  processor.rs
core/src/modules/: mod.rs
core/src/modules/interface/: mod.rs
core/src/modules/sequencing/: arpeggiator.rs  mod.rs  notes_track.rs  pitch.rs  pressure.rs  step_sequencer.rs  timbre.rs  transpose.rs  unison.rs
core/src/modules/utilities/: mod.rs  variable.rs
core/src/widgets/: image_knob.rs  mod.rs
flutter/host/: CMakeLists.txt
flutter/host/macos/: CMakeLists.txt
flutter/host/macos/common/: NodusEditor.h  NodusEditor.mm  NodusProcessor.h  NodusProcessor.mm
flutter/host/macos/plugin/: CMakeLists.txt  PluginProcessor.h  PluginProcessor.mm
flutter/host/macos/standalone/: CMakeLists.txt  main.mm
flutter/rust/: Cargo.toml
flutter/rust/src/: frb_generated.rs  lib.rs
flutter/rust/src/api/: cable.rs  endpoint.rs  graph.rs  io.rs  mod.rs  module.rs  node.rs  patch.rs  simple.rs  voices.rs
flutter/rust/src/git/: mod.rs
flutter/rust/src/other/: action.rs  event.rs  (+5 more)
host/: CMakeLists.txt
host/macos/: CMakeLists.txt
host/macos/common/: NodusEditor.h  NodusEditor.mm  NodusProcessor.h  NodusProcessor.mm  nodus.h
host/macos/plugin/: CMakeLists.txt  PluginEditor.mm  PluginProcessor.h  PluginProcessor.mm
host/macos/standalone/: CMakeLists.txt  main.mm
host/plugin/macos/: CMakeLists.txt
host/server/: notes.txt
host/src/: AudioPlugin.cpp  PluginProcessor.h  PluginProcessor.mm
host/standalone/: CMakeLists.txt
host/standalone/macos/: AudioPlugin.cpp  CMakeLists.txt  PluginProcessor.mm  main.mm
lib/core/: Cargo.toml
lib/core/.cargo/: config  wrapper.h
lib/core/src/: api.rs
lib/faust/: Cargo.toml  build.rs
lib/faust/faust/: volume.dsp
lib/faust/src/: lib.rs
plugins/audio/: Cargo.toml
plugins/audio/src/: lib.rs
(+773 files in other folders)
