[package]
name = "tonevision-core"
version = "0.1.0"
authors = ["Chase Kanipe"]
edition = "2021"

[dependencies]
faust-types = { path = "deps/faust-rs/faust-types" }
faust-state = { path = "deps/faust-rs/faust-state" }
metasampler-macros = { path = "deps/metasampler-macros" }
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tonevision-types = { path = "deps/types/" }
libloading = "0.7.3"
xml-rs = "0.8"
dynamic_reload = "0.8.0"

[lib]
path = "src/api.rs"
crate-type = ["cdylib"]
