[package]
name = "tonevision-core"
version = "0.1.0"
authors = ["Chase Kanipe"]
edition = "2021"

[dependencies]
modules = { path = "../modules" }
pa-dsp = { path = "../dsp" }
pa-protocol = { path = "../../protocol/rust" }

serde = { version = "1.0.91", features = ["derive", "rc"] }
serde_json = "1.0.91"
libloading = "0.7.3"
dynamic_reload = "0.8.0"

[lib]
path = "core.rs"
crate-type = ["cdylib"]
