[package]
name = "modules"
version = "0.1.0"
authors = ["Chase Kanipe"]
edition = "2021"

[dependencies]
# audio-plugin-loader = { path = "deps/loader" }
nodio = { path = "../io" }
pa-dsp = { path = "../dsp" }

rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
xml-rs = "0.8"

[lib]
path = "modules.rs"
