cmake_minimum_required(VERSION 3.15)
set (CMAKE_CXX_STANDARD 14)

project(NODUS_HOST VERSION 0.0.1)

if(EXISTS "${FRAMEWORK_PATH}")
    # include_subdirectory("${FRAMEWORK_PATH}" "${CMAKE_BINARY_DIR}/juce")
    include_directories("${FRAMEWORK_PATH}/Versions/A/Headers/")
else()
    message(FATAL_ERROR "Framework not found at ${FRAMEWORK_PATH}")
endif()

if(EXISTS "${JUCE_PATH}/CMakeLists.txt")
    add_subdirectory("${JUCE_PATH}" "${CMAKE_BINARY_DIR}/juce")
else()
    message(FATAL_ERROR "JUCE not found at ${JUCE_PATH}")
endif()

if(WIN32)
    add_subdirectory(windows)
elseif(APPLE)
    add_subdirectory(macos)
elseif(UNIX)
    add_subdirectory(linux)
endif()
