[package]
name = "rust_lib_metasampler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
tokio = { version = "1.40.0", features = ["full"]}
cmajor-rs = { path = "../../../cmajor-rs" }
tonevision-core = { version = "0.1.0", path = "../../core/graph" }
