[package]
name = "rust_lib_metasampler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
serde_json = "1.0"
serde_yaml = "0.8.7"
# cmajor-rs = { path = "../../../cmajor-rs" }
cmajor = { path = "../cmajor-rs" }
lazy_static = "1.5.0"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
