[package]
name = "rust_lib_metasampler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde_json = "1.0"
serde_yaml = "0.8.7"
cmajor = { path = "../../cmajor-rs" }
lazy_static = "1.5.0"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
num-traits = "0.2"
tokio = { version = "1.0", features = ["full"] }
# cpal = "0.15"
# ringbuf = "0.3"

cxx-juce = { path = "../../juce-rs" }
# git2 = { version = "0.20.0", features = ["vendored-libgit2"]}
