[package]
name = "tonevision-core"
version = "0.1.0"
authors = ["Chase Kanipe"]
edition = "2021"

[dependencies]
faust-types = { path = "../../deps/faust-rs/faust-types" }
faust-state = { path = "../../deps/faust-rs/faust-state" }
metasampler-macros = { path = "../../deps/metasampler-macros" }
libc = "0.2.112"
#midly = { path = "../../deps/midly" }
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
erased-serde = "0.3"
hound = "3.4.0"
rodio = { version = "0.15.0", features = ["mp3"]}
lazy_static = "1.4.0"
derive_more = "0.99.16"
# nativeshell = { path = "../../deps/nativeshell/nativeshell" }
env_logger = "0.9.0"
tonevision-types = { path = "../types/" }
# tonevision-io = { path = "../io" }
tonevision-faust = { path = "../faust" }
dynstack = "0.4.0"
libloading = "0.7.3"
notify = "4.0.17"
dynamic_reload = "0.8.0"
spin = "0.9.3"
xml-rs = "0.8"

[lib]
path = "src/api.rs"
crate-type = ["cdylib"]
