[package]
name = "tonevision-faust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faust-types = { path = "../../deps/faust-rs/faust-types" }
faust-state = { path = "../../deps/faust-rs/faust-state" }

[build-dependencies]
faust-build = { path = "../../deps/faust-rs/faust-build" }

