[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
pa-dsp = { path = "../../core/dsp" }
modules = { path = "../../core/modules" }
xml-rs = "0.8"
rand = "0.8"
rlua = "*"
signalsmith-stretch-sys = { git = "https://github.com/0xchase/signalsmith-stretch-sys" }

[lib]
crate-type = ["cdylib"]
